Added some styling to Header and navbar, also added logo pic and html for logo in navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 /* -------------- Variables -------------- */
 
 :root {
-  --backdark: #1e90ff;
+  --backdark: #121213;
   --backlight: #ffffff;
   --textdark: #000000;
-  --textlight: #ffffff;
+  --textlight: #78d64b;
 }
 
 /* -------------- Global styles -------------- */
@@ -62,4 +62,43 @@
     100% {
         left: -400%;
     }
+}
+/* -------------- Navbar section basic style -------------- */
+
+.header {
+  background-color: var(--backdark);
+  color: white;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav a {
+  color: var(--textlight);
+  margin-left: 1rem;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.nav a:hover {
+  text-decoration: underline;
+}   
+
+
+/* -------------- Hero section basic style -------------- */
+
+
+
+
+/* -------------- Footer section basic style -------------- */
+
+footer {
+  background-color: var(--backdark);
+  color: var(--textlight);
+  text-align: center;
+  padding: 1rem;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
