Update footer css section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,8 +104,7 @@ footer {
   background-color: var(--backdark);
   color: var(--textlight);
   text-align: center;
-  padding: 1rem;
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
 }
